# katas

./: README.md
concurrency/fut.rs/: Cargo.toml
concurrency/fut.rs/src/: main.rs
concurrency/go/: par.go
concurrency/haskell/app/: Main.hs
concurrency/haskell1/app/: Main.hs
concurrency/haskell2/app/: Main.hs
concurrency/haskell3/: par.cabal
concurrency/haskell3/app/: Main.hs
concurrency/haskell4/app/: Main.hs
elm/calculator/: calculator.elm  calculator.html
hackerrank/convert_time12/src/: main.rs
langs/: collazt_result.txt
langs/cpp/: .gitignore
langs/cpp/chi/kv5/cmake/: CMakeLists.txt  main.cpp
langs/cpp/chi/kvr/cmake/: CMakeLists.txt  main.cpp
langs/cpp/devbox/: .gitignore  devbox.json
langs/cpp/ipc/: README.md
langs/cpp/ipcnet/: README.md
langs/cpp/ipcnet/cmake/: CMakeLists.txt  main.cpp
langs/cpp/process/: README.md  agent.md
langs/cpp/process/cmake/: CMakeLists.txt  main.cpp
langs/cpp/roman/: test.md
langs/cpp/supervisor/: .gitignore  README.md
langs/cpp/supervisor/cmake/: CMakeLists.txt  main.cpp  supervisor.h
langs/elixir/: .gitignore  algoritmo_sencillo.adoc  building_towers_elixir.adoc  chrono_macro.ex  collazt_memoization_elixir.adoc  devbox.json  ejemplo_tcp_elixir.adoc  elixir_collazt.adoc  gollazt.ex  login_manager_elixir.adoc  simples.adoc
langs/elixir/axon/: testing.livemd  tutorial0.livemd  tutorial00.livemd  tutorial00.md
langs/elixir/calculator/: .gitignore  README.md  mix.exs
langs/elixir/devbox/: devbox.json
langs/elixir/div_forever/: README.md  mix.exs
langs/elixir/domain3/: .gitignore  README.md  mix.exs
langs/elixir/elist/: .gitignore  README.md  mix.exs
langs/elixir/elixfix/: Elixir.MsgParse.beam  README.md  mix.exs
langs/elixir/livebook/: phoenix_pubsub.livemd  prisioners.livemd
langs/elixir/misc/: .gitignore  README.md  mix.exs
langs/elixir/onebr/: gen.py
langs/elixir/template/: .gitignore  README.md  mix.exs
langs/elixir/wui/: .gitignore  README.md  mix.exs
langs/elixir/wui2/: .gitignore  README.md  mix.exs
langs/elixir/wui3/: .gitignore  README.md  mix.exs
langs/elixir/wui4/: .gitignore  README.md  mix.exs  routes.jsonl
langs/elixir/wui6/: .gitignore  README.md  devbox.json  mix.exs
langs/elixir/wui7/: .gitignore  AGENTS.md  README.md  mix.exs
langs/elm/calculator/: .gitignore  README.md  calculator.elm  calculator.html  elm-package.json  fsm.dot
langs/elm/status_tree/: README.md  elm-package.json  elm.js  http_server.py  status.json  status_tree.elm  status_tree.html
langs/gleam/liveview/: README.md  gleam.toml
langs/gleam/wkata/: README.md  gleam.toml  makefile  manifest.toml
langs/go/: collazt.go  collazt_paralel.go  do_for_ever1.go  do_for_ever2.go  do_for_ever3.go
langs/python/: collazt.py
langs/rust/: do_for_ever2.rs  do_for_ever4.rs
langs/rust/dpr/: Cargo.toml  README.md
langs/rust/dpr/asciio/: dsl_flow.asciio  dsl_flow.txt
langs/rust/dpr/src/: lib.rs  macros.rs  main.rs
langs/rust/dpr/src/ast/: flat.rs  mod.rs  replace.rs
langs/rust/dpr/src/parser/expression/: mod.rs
langs/rust/dpr/src/peg/: gcode.rs  mod.rs  peg2code.rs  rules.rs
langs/rust/dtt/: Cargo.toml  README.md
langs/rust/dtt/asciio/: dsl_flow.asciio  dsl_flow.txt
langs/rust/dtt/src/: lib.rs  main.rs
langs/rust/dtt/src/peg/: gcode.rs  mod.rs  peg2code.rs  rules.rs  test.rs
langs/rust/positions/: .gitignore  Cargo.toml  README.md
langs/rust/positions/src/: agregator.rs  json_api.rs  lib.rs  main.rs  position.rs  wposition.rs
langs/rust/procrust/: Cargo.toml  README.md  processes.toml
langs/rust/procrust/src/: cli_params.rs  launch_process.rs  main.rs  one_shot.rs  one_shot2.rs  process_checker.rs  process_cleaner.rs  process_cmd.rs  process_config.rs  process_cookie.rs  process_diff.rs  process_killer.rs  process_launcher.rs  process_one_shot.rs  process_reader.rs  process_updater.rs  process_watcher.rs  read_config_file.rs  run_process.rs  toml_reader.rs
langs/rust/procrust/src/one_shot/: imp.rs  running_status.rs
langs/rust/procrust/src/one_shot/imp/: cfg_proc_filter_by_dependency.rs  del_watched_files_if_missing_pid.rs  get_act_proc_conf_by_date.rs  get_running_processes.rs  launch_missing_processes.rs  mod.rs  print_diff.rs  read_all_process_watcheds.rs  send_kill_if_stopping.rs  watched_update2stopping.rs  watched_vs_config.rs
langs/rust/procrust/src/one_shot/running_status/: imp.rs
langs/rust/procrust/src/one_shot/running_status/imp/: check_start_held_processes.rs  del_if_missing_pid.rs  get_running_ids.rs  get_watched_ids.rs  launch_missing_processes.rs  launch_ready2start.rs  load_running_status.rs  mark_stopping.rs  ready2start_from_missing_watched.rs  save.rs  send_kill_on_stopping_processes.rs
langs/rust/procrust/src/one_shot/sup/: clean_stale_watched_files.rs  kill_stale_processes.rs  launch_missing_processes.rs  mod.rs  read_all_process_watcheds.rs  watched_update2stopping.rs
langs/rust/procrust/src/one_shot2/: running_status.rs
langs/rust/procrust/src/one_shot2/running_status/: imp.rs
langs/rust/procrust/src/one_shot2/running_status/imp/: get_running_ids.rs  launch_missing_processes.rs  load_running_status.rs  save.rs  send_kill_on_stopping_processes.rs
langs/rust/procrust/src/process_one_shot/sup/: kill_stale_processes.rs  launch_missing_processes.rs  watched_update2stopping.rs  watched_vs_config.rs
langs/rust/procrust/src/types/: config.rs  mod.rs  process_watched.rs  process_watcher.rs
langs/rust/procrust/src/types/config/: imp.rs  tests.rs
langs/rust/scheduler/: Cargo.toml  README.adoc  README.html  index.html  test.html
langs/rust/scheduler/src/: lib.rs  main.rs  model.rs  scheduler.rs
langs/rust/scheduler/src/scheduler/: model.rs
multikata/onebr/: onebr.livemd
multikata/pi_collisions/: README.md
multikata/square_list_equal/: README.adoc
web/jle2/: .gitignore  README.md  mix.exs  notes.txt
web/jle_phx/: .gitignore  README.md  TODO.txt  mix.exs
web/phoenix_katas/: .gitignore  README.md  TODO.txt  mix.exs  ttb_last_config
web/qwik/: package-lock.json  package.json
zmq/prj/: zmq.qbs
zmq/src/: main.cpp  zmq.hpp
(+1199 files in other folders)
