[package]
name = "procrust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
nix = "0.26"
# libc = { version = "0.2" }
# sha1 = "0.10"
uuid = { version = "1.3", features = ["v4"] }
procfs = "0.17.0"
# log = "0.4.27"
# flexi_logger = "0.30.1"
