[package]
authors = ["jleahred <jleahred@gmail.com>"]
edition = "2018"
name = "scheduler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = {version = "0.4", features = ["serde"]}
humantime-serde = "1.0.1"
rpds = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
# time = {version = "0.2.22", features = ["serde"]}
