[package]
authors = ["jleahred <jleahred@gmail.com>"]
categories = ["category"]
description = "App Description"
edition = "2018"
license = "MIT"
name = "scheduler"
readme = "./README.md"
repository = ""
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
humantime-serde = "1.0.1"
rpds = {version = "0.8.0", features = ["serde"]}
seed = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
stdweb = "0.4.20"
time = {version = "0.2.22", features = ["serde"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
